# dpi_library

./: .gitignore  CMakeLists.txt  README.md
src/: BenchmarkMain.cc  CMakeLists.txt  Main.cc
src/api/: CMakeLists.txt  append.h  close_buffer.h  context.h  create_buffer.h  dpi.h  err_codes.h  finalize.h  get_buffer.h  init.h
src/benchmark/: BenchmarkRunner.h  Benchmarks.h  CMakeLists.txt  DPIAppendBenchmark.cc  DPIAppendBenchmark.h  DPILatencyBenchmark.cc  DPILatencyBenchmark.h  RDMA_oneSidedRPCBenchmark.cc  RDMA_oneSidedRPCBenchmark.h
src/conf/: DPI.conf  istore.conf
src/dpi/: BuffHandle.h  BufferConsumer.h  BufferHandle.h  BufferReader.h  BufferSegment.h  BufferWriter.h  CMakeLists.txt  NodeClient.cc  NodeClient.h  NodeServer.cc  NodeServer.h  RegistryClient.cc  RegistryClient.h  RegistryServer.cc  RegistryServer.h
src/dpi/buffer_strategies/: BufferStrategies.h  BufferWriterInterface.h  BufferWriterPrivate.h  BufferWriterShared.h
src/dpi/iterators/: SegmentIterator.h
src/dpi/local_iterators/: BufferIterator.h  SegmentIterator.h
src/memory-api/: CMakeLists.txt  append.h  close_buffer.h  create_buffer.h  dpi.h
src/net/: CMakeLists.txt
src/net/message/: CMakeLists.txt  DPIAllocSegmentsRequest.proto  DPIAllocSegmentsResponse.proto  DPIAppendBufferRequest.proto  DPIAppendBufferResponse.proto  DPICreateBufferRequest.proto  DPICreateBufferResponse.proto  DPICreateRingOnBufferRequest.proto  DPICreateRingOnBufferResponse.proto  DPIRetrieveBufferRequest.proto  DPIRetrieveBufferResponse.proto  HelloMessage.proto  LoadDataRequest.proto  LoadDataResponse.proto  MemoryResourceRequest.proto  MemoryResourceResponse.proto  MessageErrors.h  MessageTypes.h  RDMAConnRequest.proto  RDMAConnRequestMgmt.proto  RDMAConnResponse.proto  RDMAConnResponseMgmt.proto  RegistrateReq.proto  RegistrateResp.proto
src/net/proto/: CMakeLists.txt  ProtoClient.cc  ProtoClient.h  ProtoServer.cc  ProtoServer.h  ProtoSocket.cc  ProtoSocket.h
src/net/rdma/: CMakeLists.txt  RDMAClient.cc  RDMAClient.h  RDMAManager.cc  RDMAManager.h  RDMAManagerRC.cc  RDMAManagerRC.h  RDMAManagerRCSRQ.cc  RDMAManagerRCSRQ.h  RDMAManagerUD.cc  RDMAManagerUD.h  RDMAServer.cc  RDMAServer.h  RDMAServerSRQ.cc  RDMAServerSRQ.h
src/test/: CMakeLists.txt  Test.h  TestRunner.cc  Tests.h
src/test/dpi/: CMakeLists.txt  IntegrationTestsAppend.cc  IntegrationTestsAppend.h  RegistryClientStub.h  TestBufferConsumer.cc  TestBufferConsumer.h  TestBufferIterator.cc  TestBufferIterator.h  TestBufferReader.cc  TestBufferReader.h  TestBufferWriter.cc  TestBufferWriter.h  TestNodeClient.cc  TestNodeClient.h  TestNodeServerConsumeSeg.cc  TestNodeServerConsumeSeg.h  TestRegistryClient.cc  TestRegistryClient.h
src/test/examples/: CMakeLists.txt  append_examples.cc  append_examples.h
src/test/net/: CMakeLists.txt  TestProtoServer.h  TestRDMAServer.h  TestRDMAServerMCast.h  TestRDMAServerManagementQueue.cc  TestRDMAServerManagementQueue.h  TestRDMAServerMultClients.h  TestSimpleUD.h
src/test/thread/: TestThread.h
src/thread/: CMakeLists.txt  JoinThreads.h  Thread.cc  Thread.h  adapted_thread_pool.h  threadsafe_queue.h
src/utils/: Config.cc  Config.h  Filehelper.h  Logging.h  Network.h  StringHelper.h  Timer.h
